<resources>
    <string name="app_name">Grassroot</string>
    <string name="title_activity_nogroup_welcome">Welcome</string>
    <string name="title_activity_join__request">Join request</string>
    <string name="title_activity_create__group">Create a group</string>
    <string name="title_activity_add_members">Add group members</string>
    <string name="title_activity_group_members">View members</string>
    <string name="title_activity_remove_members">Remove members</string>
    <string name="title_activity_group_tasks">GroupTasksActivity</string>
    <string name="title_activity_view_task">ViewTaskActivity</string>
    <string name="title_activity_create_vote">CreateVote</string>
    <string name="title_activity_action_completed">Completed</string>
    <string name="title_activity_group_settings">GroupSettings</string>
    <string name="title_activity_join_request_notice">JoinRequestNotice</string>
    <string name="title_activity_UserSettings">UserSettings</string>
    <string name="title_activity_grassroot_extra">Grassroot Extra</string>
    <string name="title_activity_account_signup">Sign Up For Grassroot Extra</string>
    <string name="title_activity_correct_username">Set your name</string>
    <string name="wait_message">Please wait&#8230;</string>
    <string name="login_input_hint">Cellphone number</string>
    <string name="bt_login">LOGIN</string>
    <string name="bt_next">NEXT</string>
    <string name="bt_register">REGISTER</string>
    <string name="bt_submit_otp">SUBMIT</string>
    <string name="txtresend">SMS with code not received?\n Resend</string>
    <string name="et_userName">Name</string>
    <string name="et_mobile_register">Cellphone number</string>
    <string name="otp_hint">Enter code sent by SMS</string>
    <string name="resend_otp">Resend</string>
    <string name="application_crash_error">Sorry! Grassroot crashed (we\'ve reported it)</string>
    <string name="application_notify_crash">Sorry, error loading task</string>
    <string name="error_generic">Sorry! Something went wrong in the request.</string>
    <string name="server_error_general">Sorry, something went wrong with the request.</string>
    <string name="connect_error_logreg">Hmm, we can\'t connect to the server right now. Check connection and try again?</string>
    <string name="server_error_invalid_msisdn">Sorry, that isn\'t a valid South African phone number. Please check and try again</string>
    <string name="server_error_user_exists">That number is already registered, you can just login</string>
    <string name="server_error_user_not_exist">Sorry, that number isn\'t registered, please sign up</string>
    <string name="server_error_otp_wrong">Sorry, incorrect pin entered. Please try again or resend</string>
    <string name="server_error_otp_early">Sorry, can\'t resend the code before clicking register</string>
    <string name="server_error_group_create">Sorry, there was an error creating the group. You can save it and try later.</string>
    <string name="server_error_phone_number">Sorry, one of the member\'s phone numbers was incorrect. Save and try later?</string>
    <string name="server_error_perms_denied">Sorry, you don\'t have permission for that on this group</string>
    <string name="server_error_image_error">Sorry, the photo format isn\'t supported. Please try again later or pick another</string>
    <string name="server_error_image_none">Sorry, the photo wasn\t uploaded. Please try again later</string>
    <string name="server_error_part_of_group">You\'re already part of that group</string>
    <string name="server_error_cant_approve_join">Sorry, you don\'t have permission to approve join requests anymore</string>
    <string name="server_error_date_in_past">Sorry, date can\'t be in the past. Please change and submit again</string>
    <string name="server_error_meeting_cancelled">This meeting has been cancelled by the person who called it</string>
    <string name="server_error_meeting_over">This meeting has already finished</string>
    <string name="server_error_already_voted">Your vote has already been recorded</string>
    <string name="server_error_vote_closed">Sorry, the vote is already closed</string>
    <string name="server_error_vote_cancelled">Sorry, that vote was already cancelled</string>
    <string name="server_error_todo_completed">You\'ve already marked the action complete</string>
    <string name="server_error_notifications_done">That\'s all the notifications in your list</string>
    <string name="server_error_unsubscribe_error">You have already left, please refresh on the home screen</string>
    <string name="server_error_background_group_numbers">The group is created, but some numbers were invalid, please check the group and
    add them</string>
    <string name="server_error_no_chat_settings">Error! You do not seem to be a member of this group</string>
    <string name="connect_error_group_unsubscribe">Sorry, we couldn\'t connect to the server. Please try later or unsubscribe through
    *134*1994#</string>
    <string name="connect_error_homescreen">Sorry, we couldn\'t refresh right now because the connection isn\'t working</string>
    <string name="connect_error_offline_home">You\'re working in offline mode. Please go online and try refreshing again</string>
    <string name="connect_error_group_default">The connection isn\'t working, but we saved the change and will upload next time
    you\'re connected</string>
    <string name="connect_error_view_task_snackbar">We couldn\'t connect to fetch all details, we\'ve displayed what we can</string>
    <string name="connect_error_task_responding">We couldn\'t connect now, but have saved the response and will send it when you
    connect again</string>
    <string name="connect_error_task_cancelled">Sorry, you must be connected to cancel. Please connect and try again.</string>
    <string name="connect_error_unsub_offline">You\'re offline, but leaving a group requires a connection. Try connect?</string>
    <string name="connect_error_notifications">Sorry, we can\'t connect at the moment</string>
    <string name="connect_error_edit_task">You don\'t seem to have a working data connection.</string>
    <string name="connect_error_jreqs_list">Sorry, we couldn\'t connect to refresh. Retry?</string>
    <string name="connect_error_jreqs_offline">You are in offline mode. To refresh you need to go online. Try connect?</string>
    <string name="connect_error_failed_retry">Sorry, we still can\'t connect. Please retry later.</string>
    <string name="connect_error_members_assigned">Could not retrieve assigned member list from server</string>
    <string name="input_error_field_empty">Please enter all fields to proceed</string>
    <string name="input_error_cellphone_snackbar">Please enter a valid cellphone number</string>
    <string name="input_error_cellphone_hint">Please enter cellphone number to proceed</string>
    <string name="input_error_otp_empty">Please enter the code sent by SMS</string>
    <string name="input_error_no_display_name">Please enter whatever name people know you by</string>
    <string name="input_error_name_regex">Please enter a name without special characters (e.g., !, &amp;)</string>
    <string name="input_error_phone_empty">Please enter a cellphone number to register</string>
    <string name="input_error_phone_invalid">Sorry, that\'s not a valid South African number, please check again</string>
    <string name="input_error_phone_title">Invalid number</string>
    <string name="input_error_member_phone_some">Sorry, one or more of the members has an invalid number. We have highlighted
    them in red. Please check and try again</string>
    <string name="input_error_member_phone_all">Sorry, all the member numbers you entered are invalid SA cell numbers.
        Please edit them and try again</string>
    <string name="input_error_member_phone_saved">The group is created, but some members (in red) do not have valid SA cell numbers.
    Please edit them or remove them and try again</string>
    <string name="input_error_still_invalid">Sorry, something is still going wrong with those members. But the group is created
    and you can try adding them again later at any time.</string>
    <string name="input_error_try_again">Try again</string>
    <string name="input_error_empty">Please enter text or cancel</string>
    <string name="input_error_task_no_subject">Please enter a subject</string>
    <string name="input_error_task_no_location">Please enter a location</string>
    <string name="input_error_task_no_date">Please enter a date and time</string>
    <string name="process_error_image">Sorry, something went wrong processing the image. Please try again</string>
    <string name="process_error_loading_contacts">Sorry, we couldn\'t load your contacts. Please try again or restart.</string>
    <string name="permissions_error_new_task">Sorry, you don\'t have permission to call a new event or action for this group</string>
    <string name="server_error_invalid_auth">Sorry, something is wrong with your login. Please logout and login again</string>
    <string name="server_error_expired_auth">Sorry, your session has expired, please logout and login again</string>
    <string name="local_error_load_contacts">Error loading your contacts. Please check address book permissions.</string>
    <string name="txt_welcome">Welcome to Grassroot</string>
    <string name="txt_welcome_para">To get started, create your own group, or ask to join one. You can then call meetings, take votes, record decisions, and more&#8230;</string>
    <string name="txt_getstart">To get started</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_unread">Only unread</string>
    <string name="joingroup">FIND GROUPS</string>
    <string name="startgroup">START A GROUP</string>
    <string name="gta_menu_change_desc">Change description</string>
    <string name="gta_view_code">View join code</string>
    <string name="gta_view_members">View members</string>
    <string name="gta_add_members">Add members</string>
    <string name="gta_del_members">Remove members</string>
    <string name="search">Search</string>
    <string name="gset_rename">Rename group</string>
    <string name="gset_desc_add">Add description</string>
    <string name="gset_picture">Change group picture</string>
    <string name="gset_add_org">Add another organizer</string>
    <string name="gset_change_perms">Change permissions</string>
    <string name="gset_public">Group can be found by search</string>
    <string name="gset_join_code">Group has a join code</string>
    <string name="ac_btn_share">SHARE</string>
    <string name="ac_btn_done">DONE</string>
    <string name="ac_btn_home">HOME</string>
    <string name="ac_btn_avatar">CHOOSE PICTURE</string>
    <string name="ac_btn_tasks">MEETING, VOTE OR ACTION</string>
    <string name="ac_btn_try_again">STAY ONLINE</string>
    <string name="ac_btn_offline">WORK OFFLINE</string>
    <string name="group_settings">Group settings</string>
    <string name="share_ic_title">Share</string>
    <string name="account_type_header">Account Type:</string>
    <string name="account_std_title">Standard</string>
    <string name="account_std_body">R250 / month. 10 groups on the account, each group with max
    size of 1,000 members. 15 todos and 500 customizable messages per month.</string>
    <string name="account_light_title">Light</string>
    <string name="account_light_body">R100 / month. 5 groups on the account, each group with max
        size of 500 members. 10 todos and 200 customizable SMSs per month.</string>
    <string name="account_heavy_title">Heavy</string>
    <string name="account_heavy_body">R1,000 / month. 50 groups on the account, each group with max
        size of 5,000 members. 50 todos and 2,000 customizable SMSs per month.</string>
</resources>