<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_icon_filter"
        android:title="@string/menu_filter"
        android:icon="@drawable/btn_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mi_share_default"
        android:title="@string/share_ic_title"
        android:icon="@drawable/ic_share_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_change_desc"
        android:title="@string/gta_menu_change_desc"
        app:showAsAction="never" />

    <item android:id="@+id/mi_view_join_code"
        android:title="@string/gta_view_code"
        app:showAsAction="never" />

    <item android:id="@+id/mi_view_members"
        android:title="@string/gta_view_members"
        app:showAsAction="never" />

    <item android:id="@+id/mi_add_members"
        android:title="@string/gta_add_members"
        app:showAsAction="never" />

    <item android:id="@+id/mi_remove_members"
        android:title="@string/gta_del_members"
        app:showAsAction="never" />

    <item android:id="@+id/mi_group_settings"
        android:title="@string/group_settings"
        app:showAsAction="never" />

</menu>