<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- these two items are for lists -->
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/mi_icon_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/btn_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mi_icon_filter"
        android:title="@string/menu_filter"
        android:icon="@drawable/btn_filter"
        app:showAsAction="ifRoom" />

    <!-- this one is just for viewing tasks -->
    <item
        android:id="@+id/mi_share_default"
        android:title="@string/share_ic_title"
        android:icon="@drawable/ic_share_white"
        app:showAsAction="always" />

    <!-- this one is just for notification fragment -->
    <item
        android:id="@+id/mi_only_unread"
        android:title="@string/menu_unread"
        app:showAsAction="never" />

</menu>