<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ac_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/ac_header"
        style="@style/GiantHeader"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/ac_body"
        tools:text="Action done" />

    <TextView
        android:id="@+id/ac_body"
        android:layout_above="@+id/ac_btn_tasks"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        style="@style/BoldWhiteText"
        android:padding="@dimen/padding"
        android:text="@string/txt_getstart"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_large" />

    <Button
        android:id="@+id/ac_bt_share"
        style="@style/NewTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_above="@+id/ac_bt_done"
        android:text="@string/ac_btn_share"/>

    <Button
        android:id="@+id/ac_bt_done"
        style="@style/NewTaskButton"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:visibility="visible"
        android:text="@string/ac_btn_done"/>

    <RelativeLayout
        android:id="@+id/ac_btn_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_xxlarge">

        <Button
            style="@style/NewTaskButton"
            android:id="@+id/bt_avatar"
            android:text="@string/ac_btn_avatar" />

        <Button
            style="@style/NewTaskButton"
            android:id="@+id/bt_tasks"
            android:text="@string/ac_btn_tasks"
            android:layout_below="@+id/bt_avatar" />

        <Button
            style="@style/NewTaskButton"
            android:id="@+id/bt_home"
            android:text="@string/ac_btn_home"
            android:layout_below="@+id/bt_tasks" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ac_two_btn_options"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_xxlarge">

        <Button
            style="@style/NewTaskButton"
            android:id="@+id/bt_stay_offline"
            android:text="@string/ac_btn_offline"/>

        <Button
            style="@style/NewTaskButton"
            android:id="@+id/bt_keep_trying"
            android:text="@string/ac_btn_try_again"/>

    </LinearLayout>

</RelativeLayout>