<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/ll_welcome_actions">

        <TextView
            android:id="@+id/wl_tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:textColor="@color/white"
            android:textSize="@dimen/txt_xlarge"
            android:textStyle="bold"
            android:text="@string/txt_welcome"/>

        <TextView
            android:gravity="left"
            android:layout_below="@id/wl_tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:padding="@dimen/padding"

            android:textColor="@color/white"
            android:textSize="@dimen/txt_large"
            android:text="@string/txt_welcome_para" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_welcome_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/bt_joingroup"
            style="@style/NewTaskButton"
            android:text="@string/joingroup"
            android:textSize="@dimen/txt_medium" />

        <Button
            android:id="@+id/bt_startgroup"
            style="@style/NewTaskButton"
            android:text="@string/startgroup"
            android:textSize="@dimen/txt_medium"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
