<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background">

    <!-- when have time/patience, come back and figure out how damn thing works & why failing to lay out properly -->
    
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
            app:layout_collapseMode="parallax"
            app:expandedTitleGravity="bottom"
            app:expandedTitleMarginTop="@dimen/expanded_title_margin_top"
            app:expandedTitleMarginBottom="@dimen/expanded_title_margin_bottom">
    
            <TextView
                android:id="@+id/gsfrag_header"
                style="@style/GiantHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Group name"/>
    
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/gset_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                style="@style/SettingsBlockTightMargin" >

                <Button
                    android:id="@+id/gset_btn_rename"
                    style="@style/SettingsButton"
                    android:text="@string/gset_rename"/>

                <View
                    style="@style/SettingsSeparator" />

                <Button
                    android:id="@+id/gset_btn_description"
                    style="@style/SettingsButton"
                    android:text="@string/gset_desc_add" />

                <View
                    style="@style/SettingsSeparator" />

                <Button
                    android:id="@+id/gset_btn_picture"
                    android:text="@string/gset_picture"
                    style="@style/SettingsButton" />

                <View
                    style="@style/SettingsSeparator" />

                <Button
                    android:id="@+id/gset_btn_add_org"
                    android:text="@string/gset_add_org"
                    style="@style/SettingsButton" />

                <View
                    style="@style/SettingsSeparator" />

                <Button
                    android:id="@+id/gset_btn_change_perms"
                    android:text="@string/gset_change_perms"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <RelativeLayout
                style="@style/SettingsBlockLargeMargin">

                <TextView
                    android:id="@+id/gset_tv_public_private"
                    android:text="@string/gset_public"
                    style="@style/SettingsTextView" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/gset_switch_public_private"
                    style="@style/SettingsSwitch"
                    android:layout_alignBottom="@id/gset_tv_public_private"
                    android:layout_alignTop="@id/gset_tv_public_private" />

                <View
                    android:id="@+id/separator_3"
                    android:layout_below="@id/gset_tv_public_private"
                    style="@style/SettingsSeparator" />

                <TextView
                    android:id="@+id/gset_tv_join_code"
                    android:text="@string/gset_join_code"
                    android:layout_below="@id/separator_3"
                    style="@style/SettingsTextView" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/gset_switch_join_code"
                    style="@style/SettingsSwitch"
                    android:layout_alignBottom="@id/gset_tv_join_code"
                    android:layout_alignTop="@id/gset_tv_join_code" />

            </RelativeLayout>

            <FrameLayout
                style="@style/SettingsBlockLargeMargin">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/gset_member_roles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBarMedium"
        android:visibility="gone"
        android:layout_gravity="center"/>

</android.support.design.widget.CoordinatorLayout>